--- a/css/menuH.css
+++ b/css/menuH.css
@@ -95,6 +95,16 @@
 
     }
 
+    .respMenu .menuDireito{
+        display: block;
+        padding: 1rem 2rem;
+    }
+
+    .respMenu .menuDireito a{
+        text-align: center;
+        display: block;
+        width: 100%;
+    }
     .abrir{
         display: block;
     }
